@@ -4,12 +4,15 @@ import java.util.Locale;
 import java.util.Objects;
 import java.util.function.DoubleConsumer;
 import java.util.function.IntConsumer;
+
+import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.network.chat.Style;
+import net.minecraft.util.FormattedCharSequence;
 import org.jspecify.annotations.NonNull;
 import com.qb20nh.cbbg.compat.iris.IrisCompat;
 import com.qb20nh.cbbg.config.CbbgConfig;
 import com.qb20nh.cbbg.render.CbbgDither;
 import com.qb20nh.cbbg.render.MainTargetFormatSupport;
-import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.AbstractSliderButton;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.CycleButton;
@@ -18,6 +21,7 @@ import net.minecraft.client.gui.components.Tooltip;
 import net.minecraft.client.gui.screens.ConfirmScreen;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
+import org.jspecify.annotations.Nullable;
 
 public final class CbbgConfigScreen extends Screen {
     private final Screen parent;
@@ -38,9 +42,9 @@ public final class CbbgConfigScreen extends Screen {
     private static final Tooltip TOOLTIP_GENERATE_STBN =
             Tooltip.create(Component.translatable("cbbg.config.tooltip.generate_stbn"));
 
-    private static void renderCard(GuiGraphics context, int x1, int y1, int x2, int y2) {
+    private static void renderCard(GuiGraphicsExtractor context, int x1, int y1, int x2, int y2) {
         context.fill(x1, y1, x2, y2, CARD_BG_COLOR);
-        context.renderOutline(x1, y1, x2 - x1, y2 - y1, CARD_BORDER_COLOR);
+        context.outline(x1, y1, x2 - x1, y2 - y1, CARD_BORDER_COLOR);
     }
 
     public CbbgConfigScreen(Screen parent) {
@@ -51,7 +55,7 @@ public final class CbbgConfigScreen extends Screen {
     @Override
     public void onClose() {
         if (this.parent != null) {
-            this.minecraft.setScreen(this.parent);
+            this.minecraft.setScreenAndShow(this.parent);
         } else {
             super.onClose();
         }
@@ -143,7 +147,12 @@ public final class CbbgConfigScreen extends Screen {
         seedEdit = new EditBox(this.font, cx - 100 + 40, y, 160, 20,
                 Component.translatable("cbbg.config.seed.label"));
         seedEdit.setValue(Objects.requireNonNull(Long.toString(CbbgConfig.get().stbnSeed())));
-        seedEdit.setFilter(s -> s.matches("-?\\d*")); // Only integers
+        seedEdit.addFormatter(new EditBox.TextFormatter() {
+            @Override
+            public @Nullable FormattedCharSequence format(@NonNull String text, int offset) {
+                return FormattedCharSequence.forward(text.replace("-?\\d*", ""), Style.EMPTY);
+            }//.setFilter(s -> s.matches("-?\\d*")); // Only integers // TODO
+        });
         seedEdit.setResponder(s -> {
             if (lockedByError || lockedByUser) {
                 return;
@@ -174,18 +183,18 @@ public final class CbbgConfigScreen extends Screen {
                         if (confirmed) {
                             CbbgDither.reloadStbn(true); // Force regeneration
                         }
-                        this.minecraft.setScreen(this);
+                        this.minecraft.setScreenAndShow(this);
                     }, Component.translatable("cbbg.config.confirm.regenerate_stbn.title"),
                             Component.translatable("cbbg.config.confirm.regenerate_stbn.message",
                                     stbnSize, stbnDepth, stbnSeed)) {
                         @Override
-                        public void renderBackground(@NonNull GuiGraphics context, int mouseX,
+                        public void extractBackground(@NonNull GuiGraphicsExtractor context, int mouseX,
                                 int mouseY, float partialTick) {
-                            CbbgConfigScreen.this.renderSafeBackground(context, partialTick);
+                            CbbgConfigScreen.this.extractSafeBackground(context, partialTick);
                         }
 
                         @Override
-                        public void render(@NonNull GuiGraphics context, int mouseX, int mouseY,
+                        public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY,
                                 float partialTick) {
                             // Draw the same card styling behind the confirm dialog UI.
                             final int padX = 12;
@@ -198,10 +207,10 @@ public final class CbbgConfigScreen extends Screen {
                                     this.layout.getY() + this.layout.getHeight() + padY);
                             renderCard(context, x1, y1, x2, y2);
 
-                            super.render(context, mouseX, mouseY, partialTick);
+                            super.extractRenderState(context, mouseX, mouseY, partialTick);
                         }
                     };
-                    this.minecraft.setScreen(confirm);
+                    this.minecraft.setScreenAndShow(confirm);
                 }).bounds(cx - 100, y, 200, 20).tooltip(TOOLTIP_GENERATE_STBN).build());
 
         y += 28;
@@ -278,22 +287,22 @@ public final class CbbgConfigScreen extends Screen {
     }
 
     @Override
-    public void renderBackground(@NonNull GuiGraphics context, int mouseX, int mouseY,
+    public void extractBackground(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY,
             float partialTick) {
-        this.renderSafeBackground(context, partialTick);
+        this.extractSafeBackground(context, partialTick);
     }
 
-    private void renderSafeBackground(@NonNull GuiGraphics context, float partialTick) {
+    private void extractSafeBackground(@NonNull GuiGraphicsExtractor context, float partialTick) {
         if (this.minecraft.level != null) {
-            this.renderTransparentBackground(context);
+            this.extractTransparentBackground(context);
         } else {
-            this.renderPanorama(context, partialTick);
-            this.renderMenuBackground(context);
+            this.extractPanorama(context, partialTick);
+            this.extractMenuBackground(context);
         }
     }
 
     @Override
-    public void render(@NonNull GuiGraphics context, int mouseX, int mouseY, float partialTick) {
+    public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY, float partialTick) {
         // Card background
         int cx = this.width / 2;
         int cy = this.height / 2;
@@ -305,12 +314,12 @@ public final class CbbgConfigScreen extends Screen {
         renderCard(context, x1, y1, x2, y2);
 
         // Header
-        context.drawCenteredString(this.font, this.title, cx, y1 + 10, 0xFFFFFFFF);
+        context.centeredText(this.font, this.title, cx, y1 + 10, 0xFFFFFFFF);
 
         // Seed Label
         // Layout: yStart + 48 (strength) + 24 (size/depth) + 24 (seed)
         int ySeed = cy - CARD_HEIGHT / 2 + 30 + 48 + 24 + 24 + 6;
-        context.drawString(this.font,
+        context.text(this.font,
                 Component.translatable("cbbg.config.seed.label").append(Component.literal(":")),
                 cx - 100, ySeed, 0xFFAAAAAA, false);
 
@@ -318,28 +327,28 @@ public final class CbbgConfigScreen extends Screen {
         int statusY = y2 - 36;
         final boolean irisActive = isIrisActive();
         if (CbbgDither.isDisabled()) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.disabled_render_error"), cx, statusY,
                     0xFFFF5555);
             statusY += 12;
         }
         if (MainTargetFormatSupport.hasDetectedNoFloatFormats()) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.no_float_formats"), cx, statusY,
                     0xFFFFAA00);
             statusY += 12;
         }
         if (irisActive) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.iris_active"), cx, statusY,
                     0xFFFFAA00);
         } else if (CbbgConfig.get().mode() == CbbgConfig.Mode.DISABLED) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.mode_disabled"), cx, statusY,
                     0xFFAAAAAA);
         }
 
-        super.render(context, mouseX, mouseY, partialTick);
+        super.extractRenderState(context, mouseX, mouseY, partialTick);
     }
 
     // Custom Slider for Power-of-Two values
@@ -402,7 +411,7 @@ public final class CbbgConfigScreen extends Screen {
             this.max = max;
             this.setter = setter;
 
-            float clamped = Math.min(max, Math.max(min, currentValue));
+            float clamped = Math.clamp(currentValue, min, max);
             this.value = (clamped - min) / (max - min);
             this.updateMessage();
         }
